partners and pages with embedded photos started

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,4 +12,15 @@
  *
  *= require_tree .
  *= require_self
+ *= require foundation
+ *= require foundation-datepicker
  */
+
+
+#flash {
+  padding: 0.8rem 0;
+  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+  background-color: red;
+}
