--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = display_meta_tags :site => 'HYBRID MATTERs'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
     = javascript_include_tag 'application', 'data-turbolinks-track' => true 
@@ -16,19 +17,39 @@
             - flash.each do |name, msg|
               - if msg.is_a?(String)
                 = content_tag :div, msg, :id => "flash_#{name}"
-    - if user_signed_in?
-      = "signed in as #{current_user.name} <#{current_user.email}>"
-      = link_to '[sign out]', destroy_user_session_path, :method => :delete
-      - if current_user.has_role? :admin
-        %ul.admin_top
-          %li= link_to 'Partners', admin_partners_path
-          %li= link_to 'Blog', admin_posts_path
-          %li= link_to 'Activities', admin_activities_path
-          %li= link_to 'Static pages', admin_pages_path
+    %header
+      .grid-container.logo-container
+        .row
+          .logo.small-8.small-centered.medium-3.medium-centered.large-2.columns= link_to image_tag('hm_logo.png'), '/'
+      %nav.top-bar.sticky
+        .row
+          .medium-1.column.hide-for-small-only= image_tag 'circles.png'
+          .medium-6.large-3.small-centered.columns
+            .row
+              .small-4.columns= link_to 'About', page_path('about')
+              .small-4.columns= link_to 'Partners', partners_path
+              .small-4.columns.end= link_to 'Programme', '#'
+    / - if user_signed_in?
+    /   = "signed in as #{current_user.name} <#{current_user.email}>"
+    /   = link_to '[sign out]', destroy_user_session_path, :method => :delete
+    /   - if current_user.has_role? :admin
+    /     %ul.admin_top
+    /       %li= link_to 'Partners', admin_partners_path
+    /       %li= link_to 'Blog', admin_posts_path
+    /       %li= link_to 'Activities', admin_activities_path
+    /       %li= link_to 'Static pages', admin_pages_path
           
-    - else  
-      = link_to '[sign in]', new_user_session_path
+    / - else
+    /   = link_to '[sign in]', new_user_session_path
       
-    = yield
+    .main-container= yield
+    %footer
+      .row
+        .small-4.medium-2.columns= link_to image_tag('sbs_logo.png'), 'http://www.bioart.fi/', target: :_blank
+        .small-4.medium-2.columns= link_to image_tag('tuk_logo.png'), 'http://www.itu.dk/', target: :_blank        
+        .small-4.medium-2.columns= link_to image_tag('fb_logo.png'), 'http://www.forumbox.fi/', target: :_blank
+        .small-4.medium-2.columns= link_to image_tag('grenland_logo.png'), 'http://kunsthallgrenland.no/', target: :_blank        
+        .small-4.medium-2.columns= link_to image_tag('nk_logo.png'), 'http://www.nikolajkunsthal.dk/', target: :_blank
+        .small-4.medium-2.columns= link_to image_tag('mu_logo.png'), 'http://www.mah.se/', target: :_blank        
     :javascript
       $(document).ready(function() { #{yield :jquery} });
