--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,7 +66,7 @@ header {
     height: 405px;
   }
   top: 0;
-  position: absolute;
+  // position: absolute;
   width: 100%;
   
   .logo {
@@ -95,9 +95,11 @@ header {
   border-bottom: 3px solid black;
   margin: 0 0.688em 0.688em 0.688em;
   height: 100%;
+  padding-bottom: 3rem;
 }
 
 footer {
+  clear: both;
   background-color: $pastel-blue;
   padding: 5.3rem 0 5.6rem 0;
 }
