--- a/app/views/admin/partners/_form.html.haml
+++ b/app/views/admin/partners/_form.html.haml
@@ -13,7 +13,7 @@
   .row
     .large-5.small-12.columns= f.input :logo        
   .row
-    .large-12.small-12.columns= f.input :description, as: :text, input_html: {class: :ckeditor}
+    .large-12.small-12.columns= f.input :description, as: :ckeditor, input_html: {required: ''}
   .row
     .large-5.small-12.columns
       = f.input :address1
@@ -21,7 +21,9 @@
       = f.input :city
       = f.input :country, as: :country, priority_countries: ["FI", "SE", "DK", "NO"]
       = f.input :postcode
-  .row
+
+      
+  .row.photo_fields
     .small-12.large-7.columns
       = f.fields_for :photos do |ff|
         = if ff.object.image?
