--- a/app/views/calls/show.html.haml
+++ b/app/views/calls/show.html.haml
@@ -48,11 +48,12 @@
         .row
           .small-12.medium-6.columns= f.input :website
       %fieldset
-        %label Your project:
+        %label Your submission:
         
         = f.fields_for :answers do |ff|
           .row
             .small-12.columns
+              = ff.input :question_id, as: :hidden
               - if ff.object.question.question_type.to_sym == :file
                 = ff.input :attachment, label: ff.object.question.question
               - elsif ff.object.question.question_type.to_sym == :boolean
