no scaling of background

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,8 +68,8 @@ header {
   
   background: url(image_path('top_image1.png')) no-repeat top center;
   background-color: $pastel-blue;
-  background-size: cover;
-  height: 400px;
+//  background-size: cover;
+  height: 475px;
 
   top: 0;
   // position: absolute;
