--- a/app/views/admin/partners/_form.html.haml
+++ b/app/views/admin/partners/_form.html.haml
@@ -11,7 +11,17 @@
   .row
     .large-5.small-12.columns= f.input :website
   .row
-    .large-5.small-12.columns= f.input :logo        
+    .large-5.small-12.columns
+      - if f.object.logo?
+        = image_tag f.object.logo.url(:thumb)
+        = f.input :remove_logo, as: :boolean
+      = f.input :logo
+
+    .large-5.small-12.columns
+      - if f.object.hmlogo?
+        = image_tag f.object.hmlogo.url(:thumb)
+        = f.input :remove_hmlogo, as: :boolean
+      = f.input :hmlogo    , label: 'HYBRID MATTERs logo'
   .row
     .large-12.small-12.columns= f.input :description, as: :ckeditor, input_html: {required: ''}
   .row
