--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.page_container {
+  margin: 1.5rem 0;
+  
+  h2 {
+    color: #3e3e3e;
+    margin-bottom: 2rem;
+  }
+
+  .body {
+    color: #222;
+    p {
+      color: #222;
+    }
+  }
+}
