--- a/app/assets/stylesheets/partners.css.scss
+++ b/app/assets/stylesheets/partners.css.scss
@@ -1,4 +1,43 @@
+@import 'variables';
+
 #mapcontainer {
   width: 100%;
   height: 250px;
+}
+
+.partner_container {
+  margin: 0;
+  
+  .partner {
+    padding: 3.75rem 0;
+    
+    border-bottom: 3px solid black;
+    
+    .partner_info {
+      
+      .country {
+        color: $turq;
+        text-transform: uppercase;
+        font-size: 0.8rem;
+      }
+      .name {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+        color: #222;
+      }
+      .web {
+        font-size: 0.8rem;
+        a {
+          color: #222;
+          &:hover {
+            color: $turq;
+          }
+        }
+      }
+      .description {
+        font-size: 0.8rem;
+        color: #222;
+      }
+    }
+  }
 }
