--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,10 +10,10 @@
     margin-bottom: 2rem;
   }
 
-  .body {
+  .body, .body p {
     color: #222;
-    p {
-      color: #222;
-    }
+    font-size: 1rem;
+    line-height: 1.4rem;
+    font-weight: 300;
   }
 }
