--- a/app/assets/stylesheets/partners.css.scss
+++ b/app/assets/stylesheets/partners.css.scss
@@ -12,13 +12,16 @@
     padding: 3.75rem 0;
     
     border-bottom: 3px solid black;
-    
+    &.last {
+      border-bottom: none;
+    }
     .partner_info {
       
       .country {
         color: $turq;
         text-transform: uppercase;
         font-size: 0.8rem;
+        font-weight: 300;
       }
       .name {
         font-size: 1.8rem;
@@ -26,7 +29,9 @@
         color: #222;
       }
       .web {
-        font-size: 0.8rem;
+        font-size: 0.0rem;
+        margin-bottom: 1rem;
+        font-weight: 300;
         a {
           color: #222;
           &:hover {
@@ -34,9 +39,11 @@
           }
         }
       }
-      .description {
-        font-size: 0.8rem;
+      .description, .description p {
+        font-size: 0.9rem;
+        line-height: 1.4rem;
         color: #222;
+        font-weight: 300;
       }
     }
   }
