--- a/app/views/calls/show.html.haml
+++ b/app/views/calls/show.html.haml
@@ -1,82 +1,55 @@
-.row
-  .small-12.columns
-    %h1= @call.name
-
-.image_carousel
-  - @call.photos.each do |photo|
-    .slide= image_tag photo.image.url
+.call_container
+  .row
+    .medium-2.columns.hide-for-small-only &nbsp;
+    .small-12.columns.medium-8
+      .small_heading Call For Artworks
+      %h1= @call.name
+    .medium-2.columns.hide-for-small-only.navigator
+      &nbsp;
+      %ol
+        - @call.headings.each do |heading|
+          %li.heading= link_to heading.last, '#', onclick: "scrollTo('a[name=#{heading.first}]');"
+          
+  .image_carousel
+    - @call.photos.each do |photo|
+      .slide= image_tag photo.image.url
+      
+  - if @call.headings.empty? || (@call.chunks.size != @call.headings.size)
+    .row
+      .small-12.columns.medium-8.medium-offset-2.call_text
+        = raw @call.overview
+  - else
+    - @call.chunks.each_with_index do |chunk, index|
+      .row
+        .medium-2.columns.hide-for-small-only
+          .left_heading
+            = "#{index+1}. #{@call.headings[index].last}"
+        .small-12.columns.medium-8.end.call_text
+          %a{name: @call.headings[index].first } 
+          - if index == 0
+          
+            %br/
+          - else
+            .just_border
+              &nbsp;
+          = raw chunk
+            
     
-.row
-  .small-12.columns
-    = raw @call.overview
+  .row
+    .medium-2.columns.hide-for-small-only &nbsp;
+    .small-12.columns.medium-8.end.call_text
+      %h4
+        Deadline for applying:
+        = l @call.end_at, format: :long
+      = link_to 'Apply now', apply_call_path(@call), class: [:button, :application]
 
-.row
-  .small-12.columns
-    %h4
-      Deadline for applying:
-      = l @call.end_at, format: :long
-
-.application
-  = semantic_form_for @call, html: {multipart: true, :"data-abide" => '' } do |form|
-    .row
-      .small-12.columns
-        %h3= "Apply to #{@call.name}"
-
-    = form.fields_for @submission do |f|
-      .row
-        .small-12.columns
-          %h5 Who are you?
-      .row
-        .small-6.medium-3.columns= f.input :first_name, input_html: {required: ''}
-        .small-6.medium-3.end.columns= f.input :last_name, input_html: {required: '' }
-      .row
-        .small-12.medium-6.columns= f.input :organisation_name
-      .row
-        .small-12.medium-6.columns= f.input :address, input_html: {required: ''}
-      .row
-        .small-6.columns= f.input :city, input_html: {required: ''}
-      .row
-        .small-6.columns= f.input :country, as: :country,priority_countries: [], only: ["AX", "DK", "FI", "FO",  "GL","IS", "NO", "SE" ], input_html: {required: ''}
-      
-      .row
-        .small-6.columns= f.input :date_of_birth,  :input_html => { :class => "fdatepicker", required: ''}, label: 'Your date of birth'
-      .row
-        .small-6.columns= f.input :nationality,  as: :country, priority_countries: ["AX", "DK", "FI", "FO",  "GL","IS", "NO", "SE" ], input_html: {required: ''}
-      .row
-        .small-6.columns= f.input :short_biography, label: "Short biography", hint: "1500 char. max"
-      .row
-        .small-12.medium-6.columns= f.input :email, input_html: {required: ''}
-      .row
-        .small-12.medium-6.columns= f.input :website
-      .row
-        .small-12.columns
-          %h5 Your submission:
-      
-      = f.fields_for :answers do |ff|
-        .row
-          .small-12.columns
-            = ff.input :question_id, as: :hidden
-            - if ff.object.question.question_type.to_sym == :file
-              = ff.input :attachment, label: ff.object.question.question
-            - elsif ff.object.question.question_type.to_sym == :boolean
-              = ff.input :answer_boolean, label: ff.object.question.question, as: :boolean
-            - else
-              = ff.input :answer_text, as: ff.object.question.question_type.to_sym, label: ff.object.question.question
-
-    .row
-      .small-12.columns= form.submit "Submit", class: [:button ]
-  
-        
-= content_for :jquery do
-  :plain
-    $('.fdatepicker').fdatepicker({format: 'yyyy-mm-dd'});  
-  - if @call.photos.size > 1
-    :plain
-      $('.image_carousel').slick({infinite: true,
-        arrows: false,
-        slide: '.slide',
-        variableWidth: false,
-        autoplay: true,
-        autoplaySpeed: 2400,
-        slidesToScroll: 1,
-      });        
+    - if @call.photos.size > 1
+      :plain
+        $('.image_carousel').slick({infinite: true,
+          arrows: false,
+          slide: '.slide',
+          variableWidth: false,
+          autoplay: true,
+          autoplaySpeed: 2400,
+          slidesToScroll: 1,
+        });        
