2x drop on partners

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,7 +65,7 @@
     .main-container= yield
     %footer
       .row
-        .medium-2.medium-offset-1.small-8.small-centered.medium-left.columns
+        .medium-2.small-offset-1.small-8.medium-left.columns
           .row
             .small-12.columns.footer_title Nordic Cultural Event of the Year
           .row
