--- a/app/views/calls/apply.html.haml
+++ b/app/views/calls/apply.html.haml
@@ -15,7 +15,7 @@
         
       .row
         .medium-2.small-offset-1.small-4.columns.text-left.left_form
-          .form_label.text-left 3. Organisation name
+          .form_label.text-left 3. Group name
           .hint.text-left Optional
         .small-7.medium-4.end.columns= f.input :organisation_name, label: false
         
@@ -39,11 +39,11 @@
         .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form 8. Nationality
         .small-7.medium-4.end.columns= f.input :nationality,  as: :country, priority_countries: ["AX", "DK", "FI", "FO",  "GL","IS", "NO", "SE" ], input_html: {required: ''}, label: false
         
-      .row
+      .row.has_topline
         .medium-2.small-offset-1.small-4.columns.text-left.left_form
           .form_label 9. Short biography
           .hint 1500 char. max
-        .small-7.medium-4.end.columns= f.input :short_biography, label: false, as: :text
+        .small-7.end.columns= f.input :short_biography, label: false, as: :text
         
       .row
         .medium-2.small-offset-1.small-4.columns.text-left.form_label.left_form 10. Email address
@@ -55,22 +55,22 @@
         
       - counter = 12
       = f.fields_for :answers do |ff|
-        .row
+        .row{class:  ff.object.question.question_type.to_sym == :text ? :has_topline : false }
           .medium-2.small-offset-1.small-4.columns.text-left.left_form
             .form_label= counter.to_s + ". " + ff.object.question.question
             = ff.input :question_id, as: :hidden
             - unless ff.object.question.hint.blank?
               .hint= ff.object.question.hint
-          .small-7.medium-4.end.columns{class: ff.object.question.question_type }
+          .small-7.end.columns{class: [ ff.object.question.question_type, ff.object.question.question_type.to_sym == :text ? "medium-7" : "medium-4"] }
             - if ff.object.question.question_type.to_sym == :file
               %label.file
-                = ff.input :attachment, label: false
+                = ff.input :attachment, label: false, input_html: { required: ff.object.question.required == true ? '' : false }
                 %span Upload
                 .selected_file
             - elsif ff.object.question.question_type.to_sym == :boolean
               = ff.input :answer_boolean, label: false,  as: :boolean
             - else
-              = ff.input :answer_text, as: ff.object.question.question_type.to_sym, label: false
+              = ff.input :answer_text, as: ff.object.question.question_type.to_sym, label: false, input_html: { required: ff.object.question.required == true ? '' : 'ssss' }
         - counter += 1
 
     .row
@@ -83,3 +83,8 @@
     $('input[type=file]').change(function(e){
       $(this).parents('label.file').find('.selected_file').text(e.target.files[0].name);
     });
+    $('form')
+      .on('invalid.fndtn.abide', function () {
+        $('li.file.error').next('span').css('border', '2px solid red');
+        $('li.file.error').next('span').css('color', 'red');
+      });
